// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test OptionalConfigurations should match snapshot for OptionalConfigurations with initial values  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="stepPanel"
        >
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group"
              data-id="spec.environmentVariables-0"
            >
              <label
                class="bp3-label"
                for="spec.environmentVariables"
              >
                <div
                  class="formLabel"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="scriptOptionalForm_spec.environmentVariables"
                  >
                    pipeline.scriptInputVariables common.optionalLabel
                  </span>
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="panel"
                >
                  <div
                    class="environmentVarHeader"
                  >
                    <span
                      class="label"
                    >
                      Name
                    </span>
                    <span
                      class="label"
                    >
                      Type
                    </span>
                    <span
                      class="label"
                    >
                      Value
                    </span>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                    data-testid="add-environmentVar"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      addInputVar
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group"
              data-id="spec.outputVariables-1"
            >
              <label
                class="bp3-label"
                for="spec.outputVariables"
              >
                <div
                  class="formLabel"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="scriptOptionalForm_spec.outputVariables"
                  >
                    pipeline.scriptOutputVariables common.optionalLabel
                  </span>
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="panel"
                >
                  <div
                    class="outputVarHeader"
                  >
                    <span
                      class="label"
                    >
                      Name
                    </span>
                    <span
                      class="label"
                    >
                      Type
                    </span>
                    <span
                      class="label"
                    >
                      Value
                    </span>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      addOutputVar
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group radioGroup"
              data-id="spec.onDelegate-2"
            >
              <label
                class="bp3-label"
                for="spec.onDelegate"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="scriptOptionalForm_spec.onDelegate"
                >
                  pipeline.executionTarget common.optionalLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="StyledProps--main"
                >
                  
                  <div
                    class="RadioButtonGroup--inline"
                  >
                    <label
                      class="RadioButton--radio StyledProps--main"
                    >
                      <input
                        class="RadioButton--input"
                        name="spec.onDelegate"
                        type="radio"
                        value="targethost"
                      />
                      <span
                        class="RadioButton--radioIcon"
                      />
                      Specify Target Host
                    </label>
                    <label
                      class="RadioButton--radio StyledProps--main"
                    >
                      <input
                        checked=""
                        class="RadioButton--input"
                        name="spec.onDelegate"
                        type="radio"
                        value="delegate"
                      />
                      <span
                        class="RadioButton--radioIcon"
                      />
                      On Delegate
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test OptionalConfigurations should match snapshot for OptionalConfigurations without initial values  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="stepPanel"
        >
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group"
              data-id="spec.environmentVariables-0"
            >
              <label
                class="bp3-label"
                for="spec.environmentVariables"
              >
                <div
                  class="formLabel"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="scriptOptionalForm_spec.environmentVariables"
                  >
                    pipeline.scriptInputVariables common.optionalLabel
                  </span>
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="panel"
                >
                  <div
                    class="environmentVarHeader"
                  >
                    <span
                      class="label"
                    >
                      Name
                    </span>
                    <span
                      class="label"
                    >
                      Type
                    </span>
                    <span
                      class="label"
                    >
                      Value
                    </span>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                    data-testid="add-environmentVar"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      addInputVar
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group"
              data-id="spec.outputVariables-1"
            >
              <label
                class="bp3-label"
                for="spec.outputVariables"
              >
                <div
                  class="formLabel"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="scriptOptionalForm_spec.outputVariables"
                  >
                    pipeline.scriptOutputVariables common.optionalLabel
                  </span>
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="panel"
                >
                  <div
                    class="outputVarHeader"
                  >
                    <span
                      class="label"
                    >
                      Name
                    </span>
                    <span
                      class="label"
                    >
                      Type
                    </span>
                    <span
                      class="label"
                    >
                      Value
                    </span>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      addOutputVar
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <div
              class="bp3-form-group radioGroup"
              data-id="spec.onDelegate-2"
            >
              <label
                class="bp3-label"
                for="spec.onDelegate"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="scriptOptionalForm_spec.onDelegate"
                >
                  pipeline.executionTarget common.optionalLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="StyledProps--main"
                >
                  
                  <div
                    class="RadioButtonGroup--inline"
                  >
                    <label
                      class="RadioButton--radio StyledProps--main"
                    >
                      <input
                        checked=""
                        class="RadioButton--input"
                        name="spec.onDelegate"
                        type="radio"
                        value="targethost"
                      />
                      <span
                        class="RadioButton--radioIcon"
                      />
                      Specify Target Host
                    </label>
                    <label
                      class="RadioButton--radio StyledProps--main"
                    >
                      <input
                        class="RadioButton--input"
                        name="spec.onDelegate"
                        type="radio"
                        value="delegate"
                      />
                      <span
                        class="RadioButton--radioIcon"
                      />
                      On Delegate
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="formGroup md"
            >
              <div
                class="bp3-form-group"
                data-id="spec.executionTarget.host-3"
              >
                <label
                  class="bp3-label"
                  for="spec.executionTarget.host"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="scriptOptionalForm_spec.executionTarget.host"
                  >
                    targetHost
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.executionTarget.host"
                        placeholder="cd.specifyTargetHost"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="formGroup md"
            >
              <div
                class="bp3-form-group"
                data-id="spec.executionTarget.connectorRef-4"
              >
                <label
                  class="bp3-label"
                  for="spec.executionTarget.connectorRef"
                >
                  sshConnector
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="flex-grow: 1;"
                  >
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main value Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      data-testid="create-or-select-secret"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="key-main"
                        style="height: 12px;"
                      >
                        <svg
                          height="24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            stroke="#1C1C28"
                            stroke-width="0.5"
                          >
                            <path
                              d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                            />
                            <path
                              d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                            />
                          </g>
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main"
                          style="--text-line-clamp: 1;"
                        >
                          createOrSelectSecret
                        </p>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="formGroup md"
            >
              <div
                class="bp3-form-group"
                data-id="spec.executionTarget.workingDirectory-5"
              >
                <label
                  class="bp3-label"
                  for="spec.executionTarget.workingDirectory"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="scriptOptionalForm_spec.executionTarget.workingDirectory"
                  >
                    workingDirectory
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.executionTarget.workingDirectory"
                        placeholder="cd.enterWorkDirectory"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test OptionalConfigurations should match snapshot for OptionalConfigurations without initial values  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="stepPanel"
            >
              <div
                class="formGroup"
              >
                <div
                  class="bp3-form-group"
                  data-id="spec.environmentVariables-0"
                >
                  <label
                    class="bp3-label"
                    for="spec.environmentVariables"
                  >
                    <div
                      class="formLabel"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="scriptOptionalForm_spec.environmentVariables"
                      >
                        pipeline.scriptInputVariables common.optionalLabel
                      </span>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="panel"
                    >
                      <div
                        class="environmentVarHeader"
                      >
                        <span
                          class="label"
                        >
                          Name
                        </span>
                        <span
                          class="label"
                        >
                          Type
                        </span>
                        <span
                          class="label"
                        >
                          Value
                        </span>
                      </div>
                      <div
                        class="environmentVarHeader"
                      >
                        <div
                          class="bp3-form-group"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="spec.environmentVariables[0].name"
                                placeholder="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-popover-wrapper Select--main bp3-fill"
                            >
                              <div
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="spec.environmentVariables[0].type"
                                    placeholder="- typeLabel -"
                                    style="padding-right: 0px;"
                                    type="text"
                                    value="String"
                                  />
                                  <span
                                    class="bp3-input-action"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                      icon="chevron-down"
                                    >
                                      <svg
                                        data-icon="chevron-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          chevron-down
                                        </desc>
                                        <path
                                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group"
                        >
                          
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                            >
                              <div
                                class="bp3-input-group MultiTypeInput--input"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="spec.environmentVariables[0].value"
                                  placeholder="valueLabel"
                                  type="text"
                                  value="hello"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                          data-testid="remove-environmentVar-0"
                          type="button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="main-trash"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 16 20"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                        data-testid="add-environmentVar"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-plus StyledProps--main"
                          icon="plus"
                        >
                          <svg
                            data-icon="plus"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              plus
                            </desc>
                            <path
                              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          addInputVar
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup"
              >
                <div
                  class="bp3-form-group"
                  data-id="spec.outputVariables-1"
                >
                  <label
                    class="bp3-label"
                    for="spec.outputVariables"
                  >
                    <div
                      class="formLabel"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="scriptOptionalForm_spec.outputVariables"
                      >
                        pipeline.scriptOutputVariables common.optionalLabel
                      </span>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="panel"
                    >
                      <div
                        class="outputVarHeader"
                      >
                        <span
                          class="label"
                        >
                          Name
                        </span>
                        <span
                          class="label"
                        >
                          Type
                        </span>
                        <span
                          class="label"
                        >
                          Value
                        </span>
                      </div>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-plus StyledProps--main"
                          icon="plus"
                        >
                          <svg
                            data-icon="plus"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              plus
                            </desc>
                            <path
                              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          addOutputVar
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup"
              >
                <div
                  class="bp3-form-group radioGroup"
                  data-id="spec.onDelegate-2"
                >
                  <label
                    class="bp3-label"
                    for="spec.onDelegate"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="scriptOptionalForm_spec.onDelegate"
                    >
                      pipeline.executionTarget common.optionalLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="StyledProps--main"
                    >
                      
                      <div
                        class="RadioButtonGroup--inline"
                      >
                        <label
                          class="RadioButton--radio StyledProps--main"
                        >
                          <input
                            checked=""
                            class="RadioButton--input"
                            name="spec.onDelegate"
                            type="radio"
                            value="targethost"
                          />
                          <span
                            class="RadioButton--radioIcon"
                          />
                          Specify Target Host
                        </label>
                        <label
                          class="RadioButton--radio StyledProps--main"
                        >
                          <input
                            class="RadioButton--input"
                            name="spec.onDelegate"
                            type="radio"
                            value="delegate"
                          />
                          <span
                            class="RadioButton--radioIcon"
                          />
                          On Delegate
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="formGroup md"
                >
                  <div
                    class="bp3-form-group"
                    data-id="spec.executionTarget.host-3"
                  >
                    <label
                      class="bp3-label"
                      for="spec.executionTarget.host"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="scriptOptionalForm_spec.executionTarget.host"
                      >
                        targetHost
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      >
                        <div
                          class="bp3-input-group MultiTypeInput--input"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="spec.executionTarget.host"
                            placeholder="cd.specifyTargetHost"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="formGroup md"
                >
                  <div
                    class="bp3-form-group"
                    data-id="spec.executionTarget.connectorRef-4"
                  >
                    <label
                      class="bp3-label"
                      for="spec.executionTarget.connectorRef"
                    >
                      sshConnector
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        style="flex-grow: 1;"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main value Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                          data-testid="create-or-select-secret"
                          type="button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span
                            class="bp3-button-text"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main"
                              style="--text-line-clamp: 1;"
                            >
                              createOrSelectSecret
                            </p>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="formGroup md"
                >
                  <div
                    class="bp3-form-group"
                    data-id="spec.executionTarget.workingDirectory-5"
                  >
                    <label
                      class="bp3-label"
                      for="spec.executionTarget.workingDirectory"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="scriptOptionalForm_spec.executionTarget.workingDirectory"
                      >
                        workingDirectory
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      >
                        <div
                          class="bp3-input-group MultiTypeInput--input"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="spec.executionTarget.workingDirectory"
                            placeholder="cd.enterWorkDirectory"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;
